overflow issue

--- a/web/styles.css
+++ b/web/styles.css
@@ -385,7 +385,7 @@ div.toggle {
   box-shadow: 2px 3px 5px rgba(0,0,0,.2);
   border-radius: 3px;
   font-family: 'Inconsolata', monospace;
-  overflow-y: auto;
+  overflow-y: hidden;
   border: 1px solid #cc9393;
 }
 
